# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "site-forecast-app"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "==3.11.*"
license = { file = "LICENSE" }
authors = [
    { name = "Open Climate Fix team", email = "info@openclimatefix.org" },
    { name = "Peter Dudfield" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer==0.9.0",
    "pvsite-datamodel==1.2.0",
    "pandas==2.2.3",
    "pvnet==4.1.18",
    "pytz==2024.1",
    "numpy==1.26.4",
    "huggingface-hub==0.20.3",
    "ocf-data-sampler==0.5.5",
    "pyproj==3.6.0", # 3.7.1 seems to cause an error at the moment
    "pyogrio==0.8.0", # 0.9.0 seems to cause an error at the moment
    "torchvision==0.17.2",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1-cp312-none-macosx_11_0_arm64.whl ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.18.1-cp312-cp312-macosx_11_0_arm64.whl ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "sentry-sdk==2.1.1",
    "pvlib==0.12.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "ruff >= 0.9.2",
    # LSP Support
    "python-lsp-server",
    "python-lsp-ruff",
    "testcontainers",
]

[project.urls]
repository = "https://github.com/openclimatefix/site-forecast-app"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml"]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"


# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
]

[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have them.
# If they are ever made, remove from here!
module = [
    "fsspec",
    "s3fs",
    "zarr",
]
ignore_missing_imports = true

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
